fix overflow

--- a/client/src/components/Control.scss
+++ b/client/src/components/Control.scss
@@ -27,6 +27,7 @@
       flex-grow: 1;
       display: flex;
       flex-direction: column;
+      overflow: hidden;
       .name {
         flex-grow: 1;
         font-weight: bold;
